--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "confetti-js": "^0.0.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.5.0"
   },
